# simplecoder-agent

./: .gitignore  README.md  pyproject.toml
simplecoder/: __init__.py  agent.py  context.py  main.py  permissions.py  planner.py  rag.py  tools.py
simplecoder/connection_tests/: script.sh
simplecoder/demo/: higher_lower.py  index.html  style.css
